--- a/Project.toml
+++ b/Project.toml
@@ -4,11 +4,13 @@ authors = ["Augustinas Sukys"]
 version = "0.1.0"
 
 [deps]
+Catalyst = "479239e8-5488-4da2-87a7-35f2df7eef83"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 SymbolicUtils = "d1185830-fcd6-423d-90d6-eec64667417b"
 
 [compat]
-ModelingToolkit = "5.6.0"
+Catalyst = "6.6"
+ModelingToolkit = "5.6"
 SymbolicUtils = "0.8"
 julia = "1.5"
 
