--- a/Project.toml
+++ b/Project.toml
@@ -6,16 +6,20 @@ version = "0.1.0"
 [deps]
 Catalyst = "479239e8-5488-4da2-87a7-35f2df7eef83"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
+Cumulants = "01e79fc4-f247-5fa3-af0e-2bd1d4cc767f"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
+SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 SymbolicUtils = "d1185830-fcd6-423d-90d6-eec64667417b"
 TupleTools = "9d95972d-f1c8-5527-a6e0-b4b365fa01f6"
 
 [compat]
 Catalyst = "6.6"
 Combinatorics = "1"
+Cumulants = "1.0"
 ModelingToolkit = "5.6"
+SciMLBase = "1.7"
 SymbolicUtils = "0.8"
-TupleTools = "1"
+TupleTools = "1.0.2"
 julia = "1.5"
 
 [extras]
