--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 Catalyst = "479239e8-5488-4da2-87a7-35f2df7eef83"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Cumulants = "01e79fc4-f247-5fa3-af0e-2bd1d4cc767f"
+DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
@@ -22,6 +23,7 @@ Reexport = "0.2, 1.0"
 SciMLBase = "1.7"
 SymbolicUtils = "0.8"
 TupleTools = "1.0.2"
+DocStringExtensions = "0.7, 0.8"
 julia = "1.5"
 
 [extras]
