--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Cumulants = "01e79fc4-f247-5fa3-af0e-2bd1d4cc767f"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
+OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 SymbolicUtils = "d1185830-fcd6-423d-90d6-eec64667417b"
@@ -18,12 +19,13 @@ TupleTools = "9d95972d-f1c8-5527-a6e0-b4b365fa01f6"
 Catalyst = "6.6"
 Combinatorics = "1"
 Cumulants = "1.0"
+DocStringExtensions = "0.7, 0.8"
 ModelingToolkit = "5.6"
+OrderedCollections = "1.4"
 Reexport = "0.2, 1.0"
 SciMLBase = "1.7"
 SymbolicUtils = "0.8"
 TupleTools = "1.0.2"
-DocStringExtensions = "0.7, 0.8"
 julia = "1.5"
 
 [extras]
