--- a/Project.toml
+++ b/Project.toml
@@ -8,23 +8,27 @@ Catalyst = "479239e8-5488-4da2-87a7-35f2df7eef83"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Cumulants = "01e79fc4-f247-5fa3-af0e-2bd1d4cc767f"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
+Latexify = "23fbe1c1-3f47-55db-b15f-69d7ec21a316"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 SymbolicUtils = "d1185830-fcd6-423d-90d6-eec64667417b"
+Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 TupleTools = "9d95972d-f1c8-5527-a6e0-b4b365fa01f6"
 
 [compat]
-Catalyst = "6.6"
+Catalyst = "6.8, 6.9.0"
 Combinatorics = "1"
 Cumulants = "1.0"
 DocStringExtensions = "0.7, 0.8"
-ModelingToolkit = "5.6"
+Latexify = "0.14.10"
+ModelingToolkit = "5.12.0"
 OrderedCollections = "1.4"
 Reexport = "0.2, 1.0"
-SciMLBase = "1.7"
+SciMLBase = "1.8"
 SymbolicUtils = "0.8"
+Symbolics = "0.1"
 TupleTools = "1.0.2"
 julia = "1.5"
 
