--- a/Project.toml
+++ b/Project.toml
@@ -18,17 +18,17 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 TupleTools = "9d95972d-f1c8-5527-a6e0-b4b365fa01f6"
 
 [compat]
-Catalyst = "6.8, 6.9.0"
+Catalyst = "6.8, 6.9"
 Combinatorics = "1"
 Cumulants = "1.0"
 DocStringExtensions = "0.7, 0.8"
-Latexify = "0.14.10"
-ModelingToolkit = "5.12"
+Latexify = "0.14.11"
+ModelingToolkit = "5.13.3"
 OrderedCollections = "1.4"
 Reexport = "0.2, 1.0"
 SciMLBase = "1.8.3"
-SymbolicUtils = "0.8, 0.9"
-Symbolics = "0.1"
+SymbolicUtils = "0.9.1"
+Symbolics = "0.1.9"
 TupleTools = "1.2.0"
 julia = "1.5"
 
