fixed sample moment functions + tests
functional for not but not the best implementation

--- a/Project.toml
+++ b/Project.toml
@@ -31,6 +31,8 @@ TupleTools = "1.2.0"
 julia = "1.5"
 
 [extras]
+DiffEqJump = "c894b116-72e5-5b58-be3c-e6d8d4ac2b12"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
