--- a/Project.toml
+++ b/Project.toml
@@ -7,10 +7,13 @@ version = "0.1.0"
 Catalyst = "479239e8-5488-4da2-87a7-35f2df7eef83"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Cumulants = "01e79fc4-f247-5fa3-af0e-2bd1d4cc767f"
+DiffEqJump = "c894b116-72e5-5b58-be3c-e6d8d4ac2b12"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 Latexify = "23fbe1c1-3f47-55db-b15f-69d7ec21a316"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 SymbolicUtils = "d1185830-fcd6-423d-90d6-eec64667417b"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
@@ -20,13 +23,15 @@ TupleTools = "9d95972d-f1c8-5527-a6e0-b4b365fa01f6"
 Catalyst = "6.8, 6.9"
 Combinatorics = "1"
 Cumulants = "1.0"
+DiffEqJump = "6.13"
+Distributions = "0.24.15"
 DocStringExtensions = "0.7, 0.8"
 Latexify = "0.14.11"
-ModelingToolkit = "5.13.3"
+ModelingToolkit = "5.13.6"
 OrderedCollections = "1.4"
 SciMLBase = "1.8.3"
-SymbolicUtils = "0.9.1"
-Symbolics = "0.1.9"
+SymbolicUtils = "0.9.3"
+Symbolics = "0.1.11"
 TupleTools = "1.2.0"
 julia = "1.5"
 
