more flexible Distributions.jl compat

--- a/Project.toml
+++ b/Project.toml
@@ -24,7 +24,7 @@ Catalyst = "6.8, 6.9"
 Combinatorics = "1"
 Cumulants = "1.0"
 DiffEqJump = "6.13"
-Distributions = "0.24.15"
+Distributions = "0.23, 0.24"
 DocStringExtensions = "0.7, 0.8"
 Latexify = "0.14.11"
 ModelingToolkit = "5.13.6"
