update Distributions compat

--- a/Project.toml
+++ b/Project.toml
@@ -22,9 +22,9 @@ TupleTools = "9d95972d-f1c8-5527-a6e0-b4b365fa01f6"
 [compat]
 Catalyst = "6.8, 6.9"
 Combinatorics = "1"
-Cumulants = "1.0"
+Cumulants = "1"
 DiffEqJump = "6.13"
-Distributions = "0.23, 0.24"
+Distributions = "0.23, 0.24, 0.25"
 DocStringExtensions = "0.7, 0.8"
 Latexify = "0.15.1"
 ModelingToolkit = "5.14.0"
