--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,8 @@ jobs:
       matrix:
         version:
           - '1.5'
-          - 'nightly'
+          - '1.6'
+          #- 'nightly'
         os:
           - ubuntu-latest
           #- macOS-latest
