--- a/Project.toml
+++ b/Project.toml
@@ -30,7 +30,7 @@ Latexify = "0.15.1"
 ModelingToolkit = "5.14.0"
 OrderedCollections = "1.4"
 SciMLBase = "1.8.3"
-SymbolicUtils = "0.11, 0.12, 0.13"
+SymbolicUtils = "0.11, 0.12, 0.13, 0.14"
 Symbolics = "0.1.14, 1"
 TupleTools = "1.2.0"
 julia = "1.5"
