--- a/Project.toml
+++ b/Project.toml
@@ -20,18 +20,18 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 TupleTools = "9d95972d-f1c8-5527-a6e0-b4b365fa01f6"
 
 [compat]
-Catalyst = "6.12, 6.13"
+Catalyst = "9"
 Combinatorics = "1"
 Cumulants = "1"
-DiffEqJump = "6.13"
+DiffEqJump = "7"
 Distributions = "0.23, 0.24, 0.25"
-DocStringExtensions = "0.7, 0.8"
+DocStringExtensions = "0.8"
 Latexify = "0.15.1"
-ModelingToolkit = "5.14.0"
+ModelingToolkit = "6.5"
 OrderedCollections = "1.4"
 SciMLBase = "1.8.3"
-SymbolicUtils = "0.11, 0.12, 0.13"
-Symbolics = "0.1.14, 1"
+SymbolicUtils = "0.16"
+Symbolics = "3"
 TupleTools = "1.2.0"
 julia = "1.5"
 
