--- a/Project.toml
+++ b/Project.toml
@@ -30,7 +30,7 @@ Latexify = "0.15.1"
 ModelingToolkit = "6.5"
 OrderedCollections = "1.4"
 SciMLBase = "1.8.3"
-SymbolicUtils = "0.16"
+SymbolicUtils = "0.16, 0.17"
 Symbolics = "3"
 TupleTools = "1.2.0"
 julia = "1.6"
