--- a/Project.toml
+++ b/Project.toml
@@ -31,7 +31,7 @@ ModelingToolkit = "6.5"
 OrderedCollections = "1.4"
 SciMLBase = "1.8.3"
 SymbolicUtils = "0.16"
-Symbolics = "3"
+Symbolics = "3, 4"
 TupleTools = "1.2.0"
 julia = "1.6"
 
