--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ TupleTools = "9d95972d-f1c8-5527-a6e0-b4b365fa01f6"
 Catalyst = "9"
 Combinatorics = "1"
 Cumulants = "1"
-DiffEqJump = "7"
+DiffEqJump = "7, 8"
 Distributions = "0.23, 0.24, 0.25"
 DocStringExtensions = "0.8"
 Latexify = "0.15.1"
