tidy up the code a little

--- a/Project.toml
+++ b/Project.toml
@@ -11,11 +11,9 @@ DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 DiffEqJump = "c894b116-72e5-5b58-be3c-e6d8d4ac2b12"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
-JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 Latexify = "23fbe1c1-3f47-55db-b15f-69d7ec21a316"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 SymbolicUtils = "d1185830-fcd6-423d-90d6-eec64667417b"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
@@ -27,6 +25,7 @@ Combinatorics = "1"
 Cumulants = "1"
 DiffEqJump = "7"
 Distributions = "0.23, 0.24, 0.25"
+DataStructures = "0.18"
 DocStringExtensions = "0.8"
 Latexify = "0.15.1"
 ModelingToolkit = "6.5"
