--- a/Project.toml
+++ b/Project.toml
@@ -20,12 +20,12 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 TupleTools = "9d95972d-f1c8-5527-a6e0-b4b365fa01f6"
 
 [compat]
-Catalyst = "9"
+Catalyst = "9, 10"
 Combinatorics = "1"
 Cumulants = "1"
+DataStructures = "0.18"
 DiffEqJump = "7"
 Distributions = "0.23, 0.24, 0.25"
-DataStructures = "0.18"
 DocStringExtensions = "0.8"
 Latexify = "0.15.1"
 ModelingToolkit = "6.5"
