--- a/Project.toml
+++ b/Project.toml
@@ -24,14 +24,14 @@ Catalyst = "9, 10"
 Combinatorics = "1"
 Cumulants = "1"
 DataStructures = "0.18"
-DiffEqJump = "7"
+DiffEqJump = "7, 8"
 Distributions = "0.23, 0.24, 0.25"
 DocStringExtensions = "0.8"
 Latexify = "0.15.1"
-ModelingToolkit = "6.5"
+ModelingToolkit = "6.5, 7"
 SciMLBase = "1.8.3"
-SymbolicUtils = "0.16"
-Symbolics = "3"
+SymbolicUtils = "0.16, 0.17, 0.18"
+Symbolics = "3, 4"
 TupleTools = "1.2.0"
 julia = "1.6"
 
