--- a/Project.toml
+++ b/Project.toml
@@ -27,7 +27,7 @@ DiffEqJump = "7"
 Distributions = "0.23, 0.24, 0.25"
 DocStringExtensions = "0.8"
 Latexify = "0.15.1"
-ModelingToolkit = "6.5"
+ModelingToolkit = "6.5, 8"
 OrderedCollections = "1.4"
 SciMLBase = "1.8.3"
 SymbolicUtils = "0.16"
