--- a/Project.toml
+++ b/Project.toml
@@ -28,9 +28,9 @@ DiffEqJump = "7, 8"
 Distributions = "0.23, 0.24, 0.25"
 DocStringExtensions = "0.8"
 Latexify = "0.15.1"
-ModelingToolkit = "6.5, 7"
+ModelingToolkit = "6.5, 7, 8"
 SciMLBase = "1.8.3"
-SymbolicUtils = "0.16, 0.17, 0.18"
+SymbolicUtils = "0.16, 0.17, 0.18, 0.19"
 Symbolics = "3, 4"
 TupleTools = "1.2.0"
 julia = "1.6"
