--- a/Project.toml
+++ b/Project.toml
@@ -26,7 +26,7 @@ Cumulants = "1"
 DataStructures = "0.18"
 DiffEqJump = "7, 8"
 Distributions = "0.23, 0.24, 0.25"
-DocStringExtensions = "0.8"
+DocStringExtensions = "0.8, 0.9"
 Latexify = "0.15.14"
 ModelingToolkit = "6.5, 7, 8"
 SciMLBase = "1.8.3"
