--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,6 @@ Manifest.toml
 /docs/src/assets/misc/
 /docs/src/assets/paper/
 /examples/drafts/
-
+/.vscode
 *checkpoint.ipynb
 *.ipynb_checkpoints
