--- a/Project.toml
+++ b/Project.toml
@@ -19,17 +19,17 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 TupleTools = "9d95972d-f1c8-5527-a6e0-b4b365fa01f6"
 
 [compat]
-Catalyst = "11, 12"
+Catalyst = "13"
 Combinatorics = "1"
 Cumulants = "1"
 DataStructures = "0.18"
-Distributions = "0.23, 0.24, 0.25"
+Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
 Latexify = "0.15.14"
-ModelingToolkit = "6.5, 7, 8"
+ModelingToolkit = "8"
 SciMLBase = "1.8.3"
-SymbolicUtils = "0.19"
-Symbolics = "3, 4"
+SymbolicUtils = "1"
+Symbolics = "5"
 TupleTools = "1.2.0"
 julia = "1.6"
 
