--- a/Project.toml
+++ b/Project.toml
@@ -29,7 +29,7 @@ Latexify = "0.15.14"
 ModelingToolkit = "6.5, 7, 8"
 SciMLBase = "1.8.3"
 SymbolicUtils = "0.19"
-Symbolics = "3, 4"
+Symbolics = "3, 4, 5"
 TupleTools = "1.2.0"
 julia = "1.6"
 
