--- a/Project.toml
+++ b/Project.toml
@@ -28,7 +28,7 @@ DocStringExtensions = "0.8, 0.9"
 Latexify = "0.15.14"
 ModelingToolkit = "6.5, 7, 8"
 SciMLBase = "1.8.3"
-SymbolicUtils = "0.19"
+SymbolicUtils = "0.19, 1"
 Symbolics = "3, 4"
 TupleTools = "1.2.0"
 julia = "1.6"
