--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ Cumulants = "1"
 DataStructures = "0.18"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
-Latexify = "0.15.14"
+Latexify = "0.15.14, 0.16"
 ModelingToolkit = "8"
 SciMLBase = "1.8.3"
 SymbolicUtils = "1"
