--- a/Project.toml
+++ b/Project.toml
@@ -27,7 +27,7 @@ Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
 Latexify = "0.15.14, 0.16"
 ModelingToolkit = "8"
-SciMLBase = "1.8.3"
+SciMLBase = "1.8.3, 2"
 SymbolicUtils = "1"
 Symbolics = "5"
 TupleTools = "1.2.0"
