CompatHelper: bump compat for ModelingToolkit to 9, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -26,7 +26,7 @@ DataStructures = "0.18"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
 Latexify = "0.15.14, 0.16"
-ModelingToolkit = "8"
+ModelingToolkit = "8, 9"
 SciMLBase = "1.8.3, 2"
 SymbolicUtils = "1"
 Symbolics = "5"
