--- a/Project.toml
+++ b/Project.toml
@@ -28,7 +28,7 @@ DocStringExtensions = "0.8, 0.9"
 Latexify = "0.15.14, 0.16"
 ModelingToolkit = "8"
 SciMLBase = "1.8.3, 2"
-SymbolicUtils = "1"
+SymbolicUtils = "1, 3"
 Symbolics = "5"
 TupleTools = "1.2.0"
 julia = "1.6"
