--- a/Project.toml
+++ b/Project.toml
@@ -26,7 +26,7 @@ DataStructures = "0.18"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
 Latexify = "0.15.14, 0.16"
-ModelingToolkit = "9"
+ModelingToolkit = "9, 10"
 SciMLBase = "1.8.3, 2"
 SymbolicUtils = "3"
 Symbolics = "6"
